# nerdd-backend

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  environment.yml  pyproject.toml  pytest.ini  requirements.txt  setup.py
.github/workflows/: build-container.yml  release.yml
nerdd_backend/: main.py
nerdd_backend/actions/: __init__.py  process_serialization_result.py  save_job_to_db.py  save_module_to_db.py  save_result_checkpoint_to_db.py  save_result_to_db.py  update_job_size.py
nerdd_backend/data/: __init__.py  exceptions.py  job.py  memory_repository.py  module.py  repository.py  result.py  rethinkdb_repository.py  source.py
nerdd_backend/kafka/: __init__.py  kafka_job_consumer.py  kafka_log_consumer.py  kafka_module_consumer.py  kafka_producer.py  kafka_result_consumer.py
nerdd_backend/lifespan/: __init__.py  abstract_lifespan.py  action_lifespan.py  consume_kafka_topic_lifespan.py  create_module_lifespan.py  initialize_app_lifespan.py  initialize_database_lifespan.py  kafka_producer_lifespan.py
nerdd_backend/models/: __init__.py  challenge.py  job.py  module.py  result.py  source.py  user.py  warning.py
nerdd_backend/routers/: __init__.py  challenges.py  dynamic.py  files.py  jobs.py  modules.py  results.py  sources.py  users.py  warnings.py  websockets.py
nerdd_backend/settings/: config.yaml  development.yaml  production.py  production.yaml  testing.yaml
nerdd_backend/settings/channel/: kafka.yaml  memory.yaml
nerdd_backend/settings/db/: memory.yaml  rethinkdb.yaml
nerdd_backend/util/: __init__.py  compressed_set.py
tests/: async_step.py  conftest.py  test_something.py
tests/features/: jobs.feature  modules.feature  sources.feature
tests/mocks/: __init__.py  repository.py
tests/steps/: __init__.py  async_step.py  channel.py  client.py  files.py  repository.py  sources.py
