[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nerdd-backend"
version = "0.1.0"
description = "Description of your project"
authors = [{ name = "Steffen Hirte", email = "steffen.hirte@univie.ac.at" }]
license = { text = "MIT" }
readme = "README.md"
keywords = ["fastapi", "backend", "api"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "fastapi~=0.103.2",
    "uvicorn[standard]~=0.23.2",
    "aiokafka~=0.8.1",
    "rethinkdb~=2.4.9",
    "stringcase~=1.2.0",
    "markdown~=3.4.3",
    "Pillow~=10.0.0",
    "xmltodict~=0.13.0",
    "munch~=4.0.0",
    "python-multipart~=0.0.6",
    "aiofiles~=23.2.1",
    "looseversion~=1.3.0",
    "importlib-resources>=5; python_version<'3.9'",
    "importlib-metadata>=4.6; python_version<'3.10'",
]

[project.optional-dependencies]
dev = ["mypy~=0.981", "black~=22.6.0", "ipykernel~=6.19.4"]
test = [
    "pytest",
    "pytest-watch",
    "pytest-cov",
    "pytest-bdd",
    "pytest-mock",
    "pytest-asyncio~=0.21.1",
    "httpx~=0.25.1",
    "asgi_lifespan~=2.1.0",
]

[tool.black]
line-length = 88
target-version = ['py38']
