[build-system]
requires = ["setuptools>=62", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nerdd-backend"
version = "0.1.0"
description = "Description of your project"
authors = [{ name = "Steffen Hirte", email = "steffen.hirte@univie.ac.at" }]
license = { text = "MIT" }
readme = "README.md"
keywords = ["fastapi", "backend", "api"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "nerdd-module>=0.1.0",
    "nerdd-link>=0.1.0",
    "fastapi~=0.103.2",
    "uvicorn[standard]~=0.23.2",
    "aiokafka~=0.12.0",
    "rethinkdb~=2.4.9",
    "stringcase~=1.2.0",
    "markdown~=3.4.3",
    "Pillow~=10.0.0",
    "xmltodict~=0.13.0",
    "munch~=4.0.0",
    "python-multipart~=0.0.6",
    "aiofiles~=23.2.1",
    "looseversion~=1.3.0",
    "importlib-resources>=5; python_version<'3.9'",
    "importlib-metadata>=4.6; python_version<'3.10'",
]

[project.optional-dependencies]
dev = ["mypy~=0.981", "ruff", "ipykernel~=6.19.4"]
test = [
    "pytest",
    "pytest-watch",
    "pytest-cov",
    "pytest-bdd==7.3.0",
    "pytest-mock",
    "pytest-asyncio~=0.21.1",
    "hypothesis",
    "hypothesis-rdkit",
    "httpx~=0.25.1",
    "asgi_lifespan~=2.1.0",
]

#
# TOOLS
#
[tool.setuptools.packages.find]
where = ["."]
include = ["nerdd_backend*"]

[tool.setuptools.package-data]
nerdd_module = ["py.typed"]


[tool.ruff]
line-length = 100
extend-exclude = ["tests", "nerdd_backend/tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "T20", # no print statements
]
ignore = [
    "F403", # I often use 'from .submodule import *' in __init__.py files
    "C408", # I prefer dict(a=5) over {'a': 5}
]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = [
    # Whitelisted default arguments
    "fastapi.Body",
    "fastapi.Query",
    "fastapi.Header",
    "fastapi.Depends",
]

[tool.pytest.ini_options]
log_cli = 1
log_cli_level = "INFO"
addopts = "-x --cov-report term --cov=nerdd_backend"

[tool.pytest-watcher]
patterns = ["*.py", "*.feature", "pyproject.toml"]
